--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "lint": "eslint ./ --ext .vue,.js,.cjs --fix --ignore-path .gitignore"
     },
     "devDependencies": {
+        "@heroicons/vue": "^2.0.18",
         "@inertiajs/vue3": "^1.0.14",
         "@rushstack/eslint-patch": "^1.6.0",
         "@tailwindcss/forms": "^0.5.7",
@@ -19,6 +20,8 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.18",
         "prettier": "^3.1.0",
+        "sass": "^1.62.1",
+        "scss": "^0.2.4",
         "tailwindcss": "^3.3.5",
         "vite": "^4.4.11",
         "vue": "^3.3.8"
